--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@supabase/supabase-js": "^2.38.0",
     "@teamhanko/hanko-elements": "^0.8.3",
     "dotenv": "^16.3.1",
+    "gsap": "^3.12.2",
     "nanoid": "^5.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
