--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "@teamhanko/hanko-elements": "^0.8.3",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/react": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
+    "@upstash/ratelimit": "^0.4.4",
+    "@vercel/kv": "^0.2.3",
+    "axios": "^1.5.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "gsap": "^3.12.2",
+    "novel": "^0.1.22",
+    "openai": "^4.14.0",
+    "openai-api": "^1.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
