--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "source": "/(.*)",
       "destination": "/"
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/generate",
+      "methods": ["POST"],
+      "dest": "/api/generate"
+    }
   ]
 }
