--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "supabase": "^1.106.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
