--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "@teamhanko/hanko-elements": "^0.8.3",
+    "@tiptap/react": "^2.1.12",
     "@upstash/ratelimit": "^0.4.4",
     "@vercel/kv": "^0.2.3",
     "@vercel/node": "^3.0.7",
@@ -25,9 +26,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
