--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.0",
+    "@tailwindcss/forms": "^0.5.6",
     "@teamhanko/hanko-elements": "^0.8.3",
     "@tiptap/react": "^2.1.12",
     "@upstash/ratelimit": "^0.4.4",
