--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.0",
     "@tailwindcss/forms": "^0.5.6",
@@ -22,6 +23,7 @@
     "axios": "^1.5.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.2",
     "novel": "^0.1.22",
     "openai": "^4.14.0",
